# proof-messenger-demos

./: .dockerignore  .env.development  .env.example  .gitignore  APPROPRIATE_MESSAGING_GUIDELINES.md  BIOMETRIC_APPROVAL_FLOW_IMPLEMENTATION.md  CLI_DEMO_OUTPUT.md  CLI_SIMPLIFIED.md  COMPLETE_DEMO.md  COMPLETE_INTEGRATION_DEMO.md  COMPLIANCE_MODULE_IMPLEMENTATION.md  CONTAINERIZATION_COMPLETE.md  CONTAINERIZATION_SUMMARY.md  Cargo.toml  DEMO_RESULTS.md  DEMO_SCRIPT.md  DEMO_SHOWCASE.md  DEMO_SHOWCASE_README.md  DEVELOPER_PORTAL_STRUCTURE.md  DOCKER_DEPLOYMENT.md  E2E_TESTING_IMPLEMENTATION.md  FINTECH_MULTI_PARTY_DEMO.md  GITHUB-PUSH-INSTRUCTIONS.md  HANDOFF_SUMMARY.md  HEALTHCARE_CONSENT_DEMO.md  IMPLEMENTATION_SUMMARY.md  LIVE_DEMO.md  MEMORY_ZEROIZATION_TESTING.md  OAUTH2_RESOURCE_SERVER_IMPLEMENTATION.md  PERFORMANCE_BUDGETING_IMPLEMENTATION.md  PERSISTENCE_IMPLEMENTATION_COMPLETE.md  PROOF_MESSENGER_SECURITY_SETUP.md  PROOF_OBJECT_SPECIFICATION.md  PROTOCOL_SECURITY_COMPLETE.md  README.md  RELAY_DEMO_OUTPUT.md  RELAY_SIMPLIFIED.md  RICH_ERROR_IMPLEMENTATION_SUMMARY.md  SDK_DESIGN.md  SDK_IMPLEMENTATION_EXAMPLE.md  (+48 more)
.zencoder/rules/: proof-revocation-summary.md  repo.md
demos/: fintech-wire-transfer.html  government-secure-command.html  healthcare-record-access.html  index.html  legal-document-signing.html  server.py  test.html
docs/: proof-revocation-flow.md  proof-revocation.md
performance-tests/: config.py  demo.py  locustfile.py  mock_server.py  requirements.txt  run_perf_test.ps1  run_perf_test.sh
proof-messenger-cli/: Cargo.toml  README.md  keypair.json
proof-messenger-cli/src/: main.rs
proof-messenger-cli/tests/: cli.rs  cli_tests.rs
proof-messenger-protocol/: Cargo.toml  README.md
proof-messenger-protocol/benches/: crypto_benchmarks.rs
proof-messenger-protocol/examples/: complete_security_demo.rs  compliance_demo.rs  secure_key_demo.rs
proof-messenger-protocol/src/: crypto.rs  errors.rs  key.rs  lib.rs  messages.rs  proof.rs  proof_property_tests.rs  proofs.rs  protocol.rs  wasm.rs
proof-messenger-protocol/src/compliance/: audit_logger.rs  context_builder.rs  data_policies.rs  mod.rs  pii_detector.rs
proof-messenger-protocol/tests/: compliance_tdd_tests.rs  integration.rs  memory_protection_demo.rs  property.rs  secure_key_tests.rs  secure_proof_tests.rs
proof-messenger-relay/: .dockerignore  .env.example  Cargo.toml  DECOUPLED_ARCHITECTURE.md  Dockerfile  README.md
proof-messenger-relay/benches/: health_check_benchmark.rs  proof_verification_benchmark.rs
proof-messenger-relay/examples/: oauth_integration_demo.rs  secure_logging_demo.rs
proof-messenger-relay/migrations/: 001_initial.sql  002_revocation_list.sql
proof-messenger-relay/src/: auth_middleware.rs  database.rs  iam_connectors.rs  jwt_validator.rs  lib.rs  main.rs  metrics.rs  revocation.rs  secure_logger.rs
proof-messenger-relay/src/iam_connectors/: okta.rs
proof-messenger-relay/static/: index.html
proof-messenger-relay/tests/: docker_tests.rs  integration_tests.rs  oauth_validation_tests.rs  performance_tests.rs  relay_tests.rs  security_tests.rs  simple_oauth_tests.rs
proof-messenger-relay/tests/integration/: database_config_tests.rs  docker_integration_tests.rs  health_check_tests.rs
proof-messenger-web/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.simple  README.md  SECURE_STATE_MANAGEMENT.md  TDD_IMPLEMENTATION.md  defensive-usage.html  defensive-usage.js  demo.html  diagnostic.html  index.html  package-lock.json  package.json  playwright.config.js  react-demo.html  run-e2e-demo.js  secure-demo.html  server.py  simple-defensive.html  simple-test.html  tdd-example.html  tdd-examples.js  tdd-test.html  test.html  vitest.config.js
proof-messenger-web/examples/: biometric-approval-demo.html
proof-messenger-web/playwright-report/: index.html
proof-messenger-web/proptest-regressions/: lib.txt
proof-messenger-web/react-demo/: App.tsx
proof-messenger-web/src/: SecureKeyDemo.jsx  biometric-proof-generator.js  contract_validation.js  lib.rs  lib.rs.bak  persistent-key-store.js  property_tests.rs  secure-storage.js  useKeyStore.js
proof-messenger-web/test/: basic-wasm.test.js  biometric-proof-generator-simple.test.js  biometric-proof-generator.test.js  jest.setup.js  keystore.test.js  persistent-key-store.test.js  property-based.test.js  rich-error-handling.test.js  secure-storage.test.js  setup.js  simple-error-test.test.js  wasm-exports.test.js
proof-messenger-web/test-results/: e2e-results.json  e2e-results.xml
proof-messenger-web/tests/e2e/: README.md  global-setup.js  global-teardown.js  messaging.spec.js  performance.spec.js  react-integration.spec.js
proof-messenger-web/tests/e2e/helpers/: test-utils.js
proof-messenger-web/www/: index.html  index.js  style.css
scripts/: tdd_test_config.sh
