 [package]
name = "proof-messenger-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
proof-messenger-protocol = { path = "../proof-messenger-protocol" }
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

