[package]
name = "proof-messenger-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "1.0.1"
rand = "0.7"
wasm-bindgen = { version = "0.2", optional = true }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
# Compliance module dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.4"

[features]
default = []
wasm = ["wasm-bindgen"]

# Enable all features for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "crypto_benchmarks"
harness = false

