[package]
name = "proof-messenger-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proof-messenger-protocol = { path = "../proof-messenger-protocol" }
ed25519-dalek = "1.0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bs58 = "0.5"
hex = "0.4"

[dev-dependencies]
tower = "0.4"
hyper = "1.0"
tower-http = "0.5"
proptest = "1.4"
tokio-test = "0.4"