[package]
name = "proof-messenger-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proof-messenger-protocol = { path = "../proof-messenger-protocol" }
ed25519-dalek = "1.0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bs58 = "0.5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
tower_governor = "0.4"
# JWT validation dependencies
jsonwebtoken = "9.2"
base64 = "0.22"
async-trait = "0.1"

[dev-dependencies]
hyper = "1.0"
proptest = "1.4"
tokio-test = "0.4"
futures = "0.3"