[package]
name = "proof-messenger-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
proof-messenger-protocol = { path = "../proof-messenger-protocol" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
ed25519-dalek = "1.0.1"
rand = { version = "0.7", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Storage",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
hex = "0.4"
base32 = "0.4"
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"